--- a/todo.txt
+++ b/todo.txt
@@ -14,3 +14,5 @@ edge to edge RT
 
 OTF ray trace for effective optical thickness calculation.
 Ensure functions are not allocating using @allocated
+
+Do explicit typing where possible.
