--- a/experimental/todo.txt
+++ b/experimental/todo.txt
@@ -1,8 +1,3 @@
-For each language:
-  - Julia
-  - C++
-  - Fortran
-
 Test:
   - RT in rectangle.
   - Transport sweep. 
@@ -15,15 +10,15 @@ Test problems:
   - C5G7 full problem.
 
 Measure:
-  - Impact of static vs dynamic memory allocation
-    - Test run time for static vs dynamic: 
-      - Vectors
-      - Points
-      - Polygons
+#  - Impact of static vs dynamic memory allocation
+#    - Test run time for static vs dynamic: 
+#      - Vectors
+#      - Points
+#      - Polygons
   - Impact of floating point precision
     - Lower precision vs less memory and less cache misses, etc.
     - Test accuracy, run time, and memory for float with X bits:
-      - 16
+#      - 16
       - 32
       - 64
   - Impact of SIMD/chunking
