--- a/TODO
+++ b/TODO
@@ -1,3 +1,8 @@
+Hierarchical Mesh
+Convert to hierarchical mesh file
+write hierarchcical mesh file
+read hierarchical mesh file
+
 Use rectilinearmeshpartition
 
 Convert a mesh to MPACTMeshHierarchy
