--- a/TODO
+++ b/TODO
@@ -1,8 +1,7 @@
 Points{D, T}, SoA
 NPoints{D, N, T}, SoA with fixed N. Use in polygons?
 
-write hierarchcical mesh file
-read hierarchical mesh file
+Convert HMF to HM
 
 Use rectilinearmeshpartition
 
