--- a/TODO
+++ b/TODO
@@ -7,5 +7,7 @@ write that file with xdmf
 read that file with xdmf
 
 Ray packet intersection functions
+  Use a matrix instead of vec of vecs.
+  If any(r != r_miss), vec(N * i + j) = ...
 Multithreading
 GPU kernals
