Setup clang-tidy/clang-format

--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,6 @@
-clang-tidy target
-clang-tidy header-filter
-clang-format target -> script to run clang-format on all files
-Use cmake-init to lookat how clang-tidy and clang-format are integrated
-https://github.com/friendlyanon/cmake-init-shared-static/blob/master/cmake/lint-targets.cmake
+Start on common.
+
+spdlog
 
 clang warnings
 gcc warnings
@@ -13,3 +11,6 @@ https://devblogs.microsoft.com/cppblog/clear-functional-c-documentation-with-sph
 Add cppcheck
 Add debug build that uses address sanitizing
 OpenGL or other use interface for mesh viewing
+group tests
+
+Use unique_ptr and shared_ptr
