--- a/todo.txt
+++ b/todo.txt
@@ -1,18 +1,22 @@
-Start on common.
+Add debug build that uses sanitiziation, cppcheck, clang-tidy, and clang-format
 
-Make a hostdev test, then test it on the host and device.
+Setup continuous integration for:
+  debug and release
+  gcc and clang
+  CUDA enabled/disabled
+  For each of the above, run:
+    clang-tidy
+    cppcheck
+    clang-format
+    tests
 
-# Test without cuda
+Find an appropriate set of warnings for:
+  clang
+  gcc
 
-clang warnings
-gcc warnings
-Sphinx documentation
-Setup Read the Docs
-https://devblogs.microsoft.com/cppblog/clear-functional-c-documentation-with-sphinx-breathe-doxygen-cmake/
-Add cppcheck
-Add debug build that uses address sanitizing
-OpenGL or other use interface for mesh viewing
-group tests
+Setup Sphinx/Read the Docs
 
-Use unique_ptr and shared_ptr
- -cppcoreguidelines-owning-memory,?
+Add code coverage
+
+Add OpenGL or other visualization for user interface for mesh viewing
+  Maybe just call Gmsh? Would need to account for Gmsh being active in the current process.
