--- a/todo.txt
+++ b/todo.txt
@@ -1,12 +1,3 @@
-Follow Eigen documentation and setup multithreading and CUDA tests
-
-Can vector be replaced with Eigen?
-Vector int, uint, float, double, uint64,int64
-Vector noexcept
-
-vec2 int, uint etc. noexcept
-
-
 Setup Sphinx/Read the Docs
 
 Add code coverage
@@ -14,6 +5,6 @@ Add code coverage
 Add OpenGL or other visualization for user interface for mesh viewing
   Maybe just call Gmsh? Would need to account for Gmsh being active in the current process.
 
-Half edge mesh
+Half edge mesh?
 CrossSection struct
 Reading/Writing MPACT files
