--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,8 @@
+Benchmark methods for CPU and GPU
+  Larger meshes -> pin cell, lattice, and full core
+  Need IO to read these
+  Use these to determine for what N we should use single thread, multi-thread, or GPU
+
 Rectilinear Grid
 FVM
 FVM IO
@@ -8,7 +13,7 @@ d' = (1, 0, 0) and o' = (0, 0, 0).  Then the intersection is just the
 
 MeshFile
 
-Remove thrust as a dependency
+Remove thrust as a dependency? 
 
 Seach for NOLINTS and check that they are still needed
 
