WIP: correcting for OMP/CUDA

--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,11 @@
+openmp and cuda kernels for bounding box and the mesh functions
+
+Add OpenMP to the test matrix
+
+Create benchmark of bounding box of a vector of 2D oints
+
+DO the set_child function but as a member function for the mesh
+
 Benchmark methods for CPU and GPU
   Larger meshes -> pin cell, lattice, and full core
   Need IO to read these
