--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,11 @@
+Tests for each stdlib function
+Tests for each common function
+Tests for each geometry function
+
+Make rep meshes. Test point containment, ray intersection, etc
+
+
+Fix dZ
 Drop support for non-homogenous meshes
 
 Update benchmarks
