--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,6 @@
-intersection test for mesh
+intersection test for mesh: quad, tri6, quad8
+Need to generate images before modular rays
+Need to generate rays before benchmark
 Benchmark intersection
 Benchmark intersection for pointer arithmetic version
 Benchmark using insertion sort
@@ -36,3 +38,8 @@ Meaure using std::sort for intersections vs insertion sort
   Benchmark also for binned mesh where this will be abigger issue
 
   apply permutation test
+
+move code that can be parallelized to a different directory
+
+Variables constexpr -> pi zero vec
+Pointers to It
