--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,14 @@
+Add tbb to cmake options and spack
+libtbb-dev
+
+Requires for the member functions of dions and polygons
+
+Check on implicit vs explicit converions in constructions
+
+points -> epsilon, infinity, etc.
+ 
+Add tests for the parallel functions
+
 intersection test for mesh: quad, tri6, quad8
 Need to generate images before modular rays
 Need to generate rays before benchmark
@@ -38,3 +49,4 @@ Meaure using std::sort for intersections vs insertion sort
 move code that can be parallelized to a different directory
 
 nolints/cppchecks make sure all are justified
+Check pragma diagnostic push/pop
