--- a/todo.txt
+++ b/todo.txt
@@ -1,15 +1,12 @@
-Add tbb to cmake options and spack
-libtbb-dev
+parallel
+  histogram
+  sortPermutation
+  boundingBox(Vector<Point>)
 
 Requires for the member functions of dions and polygons
 
 Check on implicit vs explicit converions in constructions
 
-points -> epsilon, infinity, etc.
- 
-Add tests for the parallel functions
-
-intersection test for mesh: quad, tri6, quad8
 Need to generate images before modular rays
 Need to generate rays before benchmark
 Benchmark intersection
@@ -25,13 +22,9 @@ To clarify:
 Make the C API functions for the spatial partition into member functions of the partition
 Benchmark for MPACT model of VERA 2A -> find face and RT
 
-Write up instructions for VERA 2A
-
 Check on status of all code
   Fix binned mesh
 Work on intersection benchmark and mesh + MPACT stats
-
-identify functions for parallelization
 
 GPU version of intersection
   Just transfer the mesh to the GPU and do operations there
@@ -40,13 +33,7 @@ mesh reorder
 
 mesh getUniqueEdges
 
-Meaure using std::sort for intersections vs insertion sort
-  Benchmark this
-  Benchmark also for binned mesh where this will be abigger issue
-
-  apply permutation test
-
-move code that can be parallelized to a different directory
+apply permutation test
 
 nolints/cppchecks make sure all are justified
 Check pragma diagnostic push/pop
