--- a/TODO
+++ b/TODO
@@ -1,9 +1,12 @@
-String to Size
-
-Review for tests, parallelism, performance, comments, and structure
+Review for tests, parallelism, performance, comments, and structure, replace std::string and std::vector 
   finished:
     stdlib
+    math
+    geometry
 
 move to_vecvec elsewhere
 getStats and print for mesh
 histogram class
+Move or refine many of the files in common
+
+Take care of nolints, pragma diagnostic push, cppcheck suppress
