--- a/TODO
+++ b/TODO
@@ -1,3 +1,10 @@
+MeshFile -> UnstructuredMesh?
+  Polymorphic?
+  Polytope soup
+
+
+
+
 Review for tests, parallelism, performance, comments, and structure, replace std::string and std::vector 
   finished:
     stdlib
