--- a/todo
+++ b/todo
@@ -2,6 +2,8 @@ Change valgrind to be optional
 
 old benchmarks to archive
 
+mortonsort for polytope soup
+
 reserve elements/vertices for submesh and read: abaqus, xdmf
 
 iterators
